add sample code for pj3

--- a/2584_C++/makefile
+++ b/2584_C++/makefile
@@ -1,4 +1,9 @@
+# all:
+# 	g++ -std=c++0x -O3 -g -Wall -fmessage-length=0 -o 2584 2584.cpp 
+# clean:
+# 	rm 2584
+
 all:
-	g++ -std=c++0x -O3 -g -Wall -fmessage-length=0 -o 2584 2584.cpp 
+	g++ -std=c++0x -O3 -g -Wall -fmessage-length=0 -o 2048sol 2048sol.cpp 
 clean:
-	rm 2584
+	rm 2048sol
