--- a/2584_C++/makefile
+++ b/2584_C++/makefile
@@ -4,6 +4,6 @@
 # 	rm 2584
 
 all:
-	g++ -std=c++0x -O3 -g -Wall -fmessage-length=0 -o 2584sol 2584sol.cpp 
+	g++ -std=c++0x -O3 -g -Wall -fmessage-length=0 -o ./test/pr-3/2584sol 2584sol.cpp 
 clean:
 	rm 2584sol
