刚刚测试了一下，速度居然下降了好多。。。

--- a/2584_C++/makefile
+++ b/2584_C++/makefile
@@ -1,9 +1,9 @@
-# all:
-# 	g++ -std=c++0x -O3 -g -Wall -fmessage-length=0 -o 2584 2584.cpp 
-# clean:
-# 	rm 2584
-
 all:
-	g++ -std=c++0x -O3 -g -Wall -fmessage-length=0 -o 2584sol 2584sol.cpp 
+	g++ -std=c++0x -O3 -g -Wall -fmessage-length=0 -o 2584 2584.cpp 
 clean:
-	rm 2584sol
+	rm 2584
+
+# all:
+# 	g++ -std=c++0x -O3 -g -Wall -fmessage-length=0 -o 2584sol 2584sol.cpp 
+# clean:
+# 	rm 2584sol
